--- a/brox.conf
+++ b/brox.conf
@@ -1,1 +1,1 @@
-9999:true:true:tagmachine.xyz:hmacss=BROXRAND servicePort=9999 tagm:tagm:go build -o tagm:
+9999:true:true:tagmachine.xyz:tagm:hmacss=BROXRAND servicePort=9999 tagm:go build -o tagm:
