--- a/brox.conf
+++ b/brox.conf
@@ -1,1 +1,8 @@
-9999:true:true:tagmachine.xyz:tagm:hmacss=BROXRAND servicePort=9999 tagm:go build -o tagm:
+PORT  9999
+TLS   true
+ALRT  true
+DN    tagmchine.xyz
+BUILD go build -o tagm
+ENV   servicePort=9999
+ENV   hmacss=%BROXRAND%
+START tagm
